[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-feature-enrichment-optimization"
version = "2.0.0"
requires-python = "==3.11.*"
dependencies = [
    "pyspark==3.5.0",
    "delta-spark==3.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
run = "ml_feature_enrichment.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ml_feature_enrichment*"]
